--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <main class="main">
   <header>
     <h1>Perla d'Occidente</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">Chi Siamo</a></li>
-        <li><a href="#gallery">Galleria</a></li>
-        <li><a href="#services">Servizi</a></li>
-        <li><a href="#contact">Contatti</a></li>
-      </ul>
-    </nav>
+    <mat-toolbar color="primary">
+      <span>Casa Vacanza</span>
+      <span class="spacer"></span>
+      <a mat-button routerLink="/about">Chi Siamo</a>
+      <a mat-button routerLink="/gallery">Galleria</a>
+      <a mat-button routerLink="/services">Servizi</a>
+      <a mat-button routerLink="/contact">Contatti</a>
+    </mat-toolbar>
   </header>
 
   <section id="hero">
