--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,33 +1,103 @@
+@use '../styles/variables' as vars;
+
 .navbar {
+  background-color: vars.$teal;
+  color: white;
   display: flex;
   align-items: center;
   padding: 0 16px;
 }
-.logo {
-  height: 40px;
-}
+
 .spacer {
   flex: 1;
 }
+
+mat-toolbar {
+  span {
+    font-size: 1.5rem;
+  }
+}
+
 .image-container {
   display: flex;
   justify-content: center;
-  margin: 20px 0;
+  margin: 3rem 0;
 }
+
 .main-image {
   width: 90%;
   max-width: 1000px;
   border-radius: 10px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
-.buttons-container {
+
+.social-container {
   display: flex;
   justify-content: center;
-  gap: 10px;
-  margin-top: 20px;
+  gap: 2rem;
+  margin: 4rem 0;
 }
 
 .main {
-  margin: auto;
-  width: 80%;
+  flex: 1;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.footer {
+  background-color: vars.$burnt-orange;
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
+
+.social-button {
+  display: flex;
+  flex-direction: column; /* Per icona sopra, testo sotto */
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  padding: 10px;
+  border-radius: 10px;
+  width: 80px;
+  height: 80px;
+  transition: all 0.3s ease-in-out;
+
+  fa-icon {
+    font-size: 2rem;
+    margin-bottom: 5px;
+  }
+}
+
+/* Colori personalizzati */
+.social-button:nth-child(1) { fa-icon { color: #25D366; } } /* WhatsApp */
+.social-button:nth-child(2) { fa-icon { color: #FF5A5F; } } /* Airbnb */
+.social-button:nth-child(3) { fa-icon { color: #003580; } } /* Booking */
+.social-button:nth-child(4) { fa-icon { color: #E4405F; } } /* Instagram */
+.social-button:nth-child(5) { fa-icon { color: #1877F2; } } /* Facebook */
+.social-button:nth-child(6) { fa-icon { color: #DB4437; } } /* Google Maps */
+
+.social-button:hover {
+  transform: scale(1.1);
+  opacity: 0.9;
+}
+
+svg {
+  height: 2rem;
+  width: 2rem;
+  margin: 5px;
+}
+
+.nav-el{
+  color: white;
+  text-decoration: none;
+  padding-left: 1rem;
+  border-radius: 1rem;
+  font-size: 1.2rem;
 }
